--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Food Ninja",
-  "short_name": "FoodNinja",
+  "name": "Tom Food",
+  "short_name": "TomFood",
   "start_url": "/index.html",
   "display": "standalone",
   "background_color": "#FFE9D2",
